# zvook-direction-finding

./: AGENTS.md  README.md  pyproject.toml
.codex/: config.toml
.codex/rules/: default.rules
DOCS/: ARCHITECTURE.md  MVP_PLAN.md  Planning.txt  STATUS_2026-06-23.md
configs/: calibration_example.json  default_array_4mic.yaml  test_array_microphone_class_4mic.yaml
scripts/: check_mvp.py  run_realtime.py  run_simulation.py  run_wav.py
tests/: test_audio_io.py  test_calibration.py  test_cli_scripts.py  test_config_cli.py  test_detector.py  test_geometry.py  test_microphone_array_compat.py  test_srp_synthetic.py  test_tdoa_sign.py  test_tracker.py  test_validation.py
zvook_doa/: __init__.py  audio_io.py  calibration.py  cli.py  config.py  detector.py  geometry.py  preprocessing.py  realtime.py  simulate.py  srp_phat.py  tracker.py  utils.py  validation.py
